# teenygrad

./: .gitignore  Cargo.toml
examples/: fun.rs  mnist.rs  mnist_gan.rs
src/: device.rs  dtype.rs  lazy.rs  lib.rs  main.rs  ops.rs  realize.rs  util.rs
src/backend/: mod.rs  ops.rs
src/backend/cpu/: mod.rs
src/codegen/: kernel.rs  linearizer.rs  mod.rs
src/nn/: mod.rs
src/nn/optim/: mod.rs
src/optim/: mod.rs
src/renderer/: cstyle.rs
src/runtime/: mod.rs  opencl.rs
src/shape/: mod.rs
src/shape/shapetracker/: mod.rs  util.rs  view.rs
src/shape/symbolic/: core_ops.rs  mod.rs
src/tensor/: core_ops.rs  dtype.rs  id.rs  mlops.rs  mod.rs  shape.rs
src/tensor/shape/: mod.rs
src/util/: approx_eq.rs  mod.rs  safetensor.rs
tests/: shapetracker.rs  symbolic.rs
