[package]
name = "teenygrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.13"
half = { version = "2.3.1", features = ["num-traits"] }
lazy_static = "1.4.0"
num-traits = "0.2.16"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
tqdm = "0.5.2"
