[package]
name = "teenygrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.13"
getrandom = { version = "0.2.10", features = ["js"] }
half = { version = "2.3.1", features = ["num-traits"] }
lazy_static = "1.4.0"
memmap2 = "0.7.1"
num-traits = "0.2.16"
opencl3 = "0.9.3"
rand = "0.8.5"
rand_distr = "0.4.3"
safetensors = "0.3.3"

[dev-dependencies]
float-cmp = "0.9.0"
image = "0.24.7"
kdam = "0.4.1"
mnist = { git = "https://github.com/allen-dai/mnist" }
sdl2 = { version = "0.35.2", features = ["image"] }
